--- a/autohub-demo/index.html
+++ b/autohub-demo/index.html
@@ -102,6 +102,49 @@ img {
     margin:0;
 }
 
+footer {
+    background: #444;
+    color: white;
+    margin: 32px auto 0;
+    padding: 9px;
+}
+
+#footer {
+    max-width: 999px;
+    margin: auto;
+}
+
+#disclaimer {
+    color: rgba(255,255,255,0.6);
+    font-size: 12px;
+}
+
+#footer ul {
+    display: inline-block;
+    margin: 17px auto;
+    width: 27%;
+}
+
+#footer ul li {
+    font-size: 14px;
+    list-style-type: none;
+    margin: 12px 2px 12px 6px;
+}
+
+#footer ul li:nth-of-type(1) {
+    font-size: 17px;
+    font-weight: bold;
+    margin: 12px 2px 16px 0;
+}
+
+#bottomBar {
+    background: rgba(0,0,0,0.5);
+    color: rgba(255,255,255,0.9);
+    font-size: 14px;
+    margin: 0 auto;
+    padding: 6px 0 6px 8%;
+}
+
 </style>
 
 </head>
@@ -162,7 +205,26 @@ img {
 </section>
 
 <footer>
-
+<div id="footer">
+<p id="disclaimer">This website is a demo site for the BitMoto AutoHub. You are not permitted to view this page unless specifically granted access by BitMoto. This is not a dealer website. The content on this page is not accurate and is simpyl for demonstration purposes.</p>
+<ul>
+<li>Models</li>
+<li>Ford Escape</li>
+<li>Ford F-150</li>
+</ul>
+<ul>
+<li>Inventory</li>
+<li>New Vehicles</li>
+<li>Used Vehicles</li>
+</ul>
+<ul>
+<li>Finance</li>
+<li>Finance Center</li>
+<li>Trade-In Appraisal</li>
+</ul>
+</div>
 </footer>
+<div id="bottomBar">AutoHub Demo - Copyright &copy; 2018 BitMoto.</div>
+
 </body>
 </html>
