--- a/autohub-demo/index.html
+++ b/autohub-demo/index.html
@@ -360,19 +360,19 @@ footer {
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
-    <img src="img1.jpg" style="width:100%">
+    <img src="https://pictures.dealer.com/h/haldemankutztownfordfd/1415/ab2df4ba57f1341bafd0eca2e8c98a12x.jpg?impolicy=resize_crop&w=1620&h=540" style="width:100%">
     <div class="text">Caption Text</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 3</div>
-    <img src="img2.jpg" style="width:100%">
+    <img src="https://pictures.dealer.com/h/haldemankutztownfordfd/1415/ab2df4ba57f1341bafd0eca2e8c98a12x.jpg?impolicy=resize_crop&w=1620&h=540" style="width:100%">
     <div class="text">Caption Two</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 3</div>
-    <img src="img3.jpg" style="width:100%">
+    <img src="https://pictures.dealer.com/h/haldemankutztownfordfd/1415/ab2df4ba57f1341bafd0eca2e8c98a12x.jpg?impolicy=resize_crop&w=1620&h=540" style="width:100%">
     <div class="text">Caption Three</div>
   </div>
 
@@ -388,6 +388,17 @@ footer {
   <span class="dot" onclick="currentSlide(2)"></span> 
   <span class="dot" onclick="currentSlide(3)"></span> 
 </div>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
