--- a/autohub-demo/index.html
+++ b/autohub-demo/index.html
@@ -56,6 +56,10 @@ header nav ul a.mute {
     color: rgba(0,0,0,0.2);
 }
 
+header nav ul a.mute:hover {
+    background: none;
+}
+
 header nav ul {
     display: none;
     list-style-type: none;
@@ -87,6 +91,7 @@ header address {
 
 .dropdown:hover ul {
     display: inline-block;
+    z-index: 1;
 }
 
 img {
@@ -94,8 +99,8 @@ img {
 }
 
 #slider {
-    height:300px;
     background: #097FAB;
+    padding: 0 0 20px 0;
     text-align: center;
 }
 
@@ -193,7 +198,7 @@ footer {
 <a class="mute" title="Not Clickable">Used Inventory</a>
 <a class="mute" title="Not Clickable">Finance & Trade</a>
 <a class="mute" title="Not Clickable">Service & Parts</a>
-<a href="#">Specials & Offers</a>
+<a href="/specials">Specials & Offers</a>
 <a class="mute" title="Not Clickable">Our Dealer</a>
 </nav>
 </header>
@@ -208,6 +213,8 @@ footer {
 <!-- Slideshow container -->
 <section id="slider">
 <div class="slideshow-container">
+
+<img src="https://pictures.dealer.com/h/haldemankutztownfordfd/1415/ab2df4ba57f1341bafd0eca2e8c98a12x.jpg?impolicy=resize_crop&w=1620&h=540" style="width:100%">
 
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
