--- a/autohub-demo/index.html
+++ b/autohub-demo/index.html
@@ -100,6 +100,7 @@ img {
 
 #slider {
     background: #097FAB;
+    min-height:200px;
     padding: 0 0 20px 0;
     text-align: center;
 }
@@ -213,8 +214,6 @@ footer {
 <!-- Slideshow container -->
 <section id="slider">
 <div class="slideshow-container">
-
-<img src="https://pictures.dealer.com/h/haldemankutztownfordfd/1415/ab2df4ba57f1341bafd0eca2e8c98a12x.jpg?impolicy=resize_crop&w=1620&h=540" style="width:100%">
 
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
