--- a/autohub-demo/ford-escape.html
+++ b/autohub-demo/ford-escape.html
@@ -1,1 +1,290 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+
+<link rel="stylesheet" type="text/css" href="https://storage.googleapis.com/autohub-demo.bitmoto.net/slider.css">
+<link rel="stylesheet" type="text/css" href="https://storage.googleapis.com/bitmoto/bitmoto.css">
+<link rel="stylesheet" type="text/css" href="https://www.strunkmarketing.com/bitmoto/css/bitmoto.css">
+<link rel="stylesheet" type="text/css" href="https://storage.googleapis.com/bitmoto/dealers/ford/haldeman-kutztown/vehicles/all/vehicles.css">
+<script async src="https://storage.googleapis.com/autohub-demo.bitmoto.net/functions.js"></script>
+
+<style>
+body {
+    margin: 0;
+    font-family:verdana;
+}
+header {
+    background: #373737;
+    color: white;
+    padding: 1%;
+    border-color: orange;
+    border-style: solid;
+    border-width: 0 0 2px 0;
+}
+header div {
+    display: inline-block;
+    width: 48%;
+    margin: auto;
+    vertical-align: top;
+}
+
+header div:nth-of-type(2) {
+    text-align: right;
+}
+
+header hr {
+    border-color: rgba(255,255,255,0.08);
+}
+
+header nav {
+    text-align: center;
+}
+
+header nav a {
+    color: white;
+    font-size:14px;
+    font-weight: bold;
+    text-decoration: none;
+    padding: 4px 1.5%;
+}
+
+header nav a.mute {
+    background: rgba(255,255,255,0.1);
+    color: rgba(0,0,0,0.5);
+    cursor: default;
+}
+
+header nav ul a.mute {
+    background: initial;
+    color: rgba(0,0,0,0.2);
+}
+
+header nav ul a.mute:hover {
+    background: none;
+}
+
+header nav ul {
+    display: none;
+    list-style-type: none;
+    margin: 28px 0 0 0;
+    text-align: left;
+    padding: 16px 8px 16px 10%;
+    position: absolute;
+    background: orange;
+    left: 0;
+    width: 100%;
+}
+
+
+header nav ul li {
+    margin: 16px ;
+}
+
+header nav ul a:hover {
+    background: rgba(255,255,255,0.1);
+}
+
+header address {
+    margin: 4px auto;
+}
+
+.dropdown {
+    padding: 10px 0 50px 0;
+}
+
+.dropdown:hover ul {
+    display: inline-block;
+    z-index: 1;
+}
+
+img {
+    max-width:100%;
+}
+
+#slider {
+    background: #097FAB;
+    min-height:200px;
+    padding: 0 0 20px 0;
+    text-align: center;
+}
+
+#featured {
+    text-align: center;
+}
+
+#featured div {
+    display: inline-block;
+    margin: 0 2px;
+    padding: 2px 0 26px;
+    width:24%;
+    vertical-align: top;
+}
+
+#featured h3, #featured p {
+    margin:0;
+}
+
+#featured1:hover, #featured2:hover, #featured3:hover, #featured4:hover {
+    background: rgba(0,0,0,0.1);
+}
+
+footer {
+    background: #444;
+    color: white;
+    margin: 0 auto 0;
+    padding: 9px;
+}
+
+#footer {
+    max-width: 999px;
+    margin: auto;
+}
+
+#disclaimer {
+    color: rgba(255,255,255,0.6);
+    font-size: 12px;
+}
+
+#footer ul {
+    display: inline-block;
+    margin: 17px auto;
+    width: 27%;
+}
+
+#footer ul li {
+    font-size: 14px;
+    list-style-type: none;
+    margin: 12px 2px 12px 6px;
+}
+
+#footer ul li:nth-of-type(1) {
+    font-size: 17px;
+    font-weight: bold;
+    margin: 12px 2px 16px 0;
+}
+
+#bottomBar {
+    background: rgba(0,0,0,0.5);
+    color: rgba(255,255,255,0.9);
+    font-size: 14px;
+    margin: 0 auto;
+    padding: 6px 0 6px 8%;
+}
+
+
+
+</style>
+
+</head>
+
+<body>
+<header>
+<div>
+<img src="https://pictures.dealer.com/h/haldemankutztownfordfd/0087/a8351ae908bc51157f3de02900fb6b8ex.jpg?impolicy=downsize&h=90" alt="" title="Your Dealer's Logo Here"!>
+</div>
+<div>
+<span>Sales: xxx-xxx-xxxx |</span>
+<span> Service: xxx-xxx-xxxx</span>
+<address>12345 BitMoto Road, AutoHub, PA 17757</address>
+</div>
+<hr>
+<nav>
+<span class="dropdown">
+<a style="cursor: default;" title="Click one of the vehicle links below">New Inventory</a>
+<ul>
+<li><a class="mute">New Vehicle Inventory</a></li>
+<li><a href="#" class="mute">New Vehicle Specials</a></li>
+<li><a href="#" class="mute">Ford Model Lineup</a></li>
+<li><a href="/ford-escape.html">Ford Escape</a></li>
+<li><a href="/ford-f150.html">Ford F-150</a></li>
+</ul>
+</span>
+<a class="mute" title="Not Clickable">Used Inventory</a>
+<a class="mute" title="Not Clickable">Finance & Trade</a>
+<a class="mute" title="Not Clickable">Service & Parts</a>
+<a href="/specials.html">Specials & Offers</a>
+<a class="mute" title="Not Clickable">Our Dealer</a>
+</nav>
+</header>
+
+
+<br>
+
+<main id="bitmoto" class="ford vehicle haldeman">
+<a href="/new-inventory/index.htm" id="BitMoto-FordCurrentSaleURL">
+<img id="BitMoto-FordCurrentSaleSmallBanner" src="https://storage.googleapis.com/bitmoto/dealers/ford/ford/sales/2018/ford-memorial-day-skinny.jpg" alt="Ford Sales Event">
+</a>
+
+<nav>
+<a href="/new-inventory/index.htm?&amp;model=Escape">Shop New Escapes</a>
+<a href="/ford-credit-online.htm">Get Pre-Approved</a>
+<a href="/black-book-value-your-trade/index.htm">Value Your Trade</a>
+<a href="/contact.htm">Schedule Test Drive</a>
+</nav>
+
+<div id="vehicle" style="background-image: url('https://storage.googleapis.com/bitmoto/dealers/ford/haldeman-kutztown/vehicles/all/escape-v3.jpg'); width:100%; height:317px; position: relative;line-height:1;margin:auto">
+<div id="bitTitle">THE FORD ESCAPE</div>
+<div id="bitLease">
+<span class="bitORtxt">LEASE FOR ONLY</span><br>
+<span class="bitOfferText"><sup>$</sup><span id="BitMoto-FordEscapeLease"></span>/mo.</span><br>
+<span>W/ $<span id="BitMoto-FordEscapeDAS"></span> DAS*</span>
+</div>
+<div id="bitFinance">
+<span class="bitORtxt">OR GET</span><br>
+<span class="bitOfferText"><span id="BitMoto-FordEscapeAPR"></span><sup>%</sup></span> FINANCING<br>FOR <b><span id="BitMoto-FordEscapeTerm"></span> MONTHS</b><br>+ Up to <b>$<span id="BitMoto-FordEscapeCash"></span></b>*</div><div id="bitSavings" style="display: none;"><span class="bitORtxt">OR GET UP TO</span><br><span class="bitOfferText">$<span id="BitMoto-FordEscapeSavings"></span></span> <span id="SavingsText">Total Savings!*</span></div></div><div id="details"><div class="two-1"><a href="/new-inventory/index.htm?search=&amp;saveFacetState=true&amp;model=Escape">SHOP NEW</a></div><div class="two-2"><a href="/used-inventory/index.htm?search=&amp;make=Ford&amp;model=Escape">SHOP USED</a></div><div class="one"><span class="msrpText">STARTING MSRP</span><br><sup>$</sup><span id="BitMoto-FordEscapeMSRP"></span></div></div>
+
+<div id="bitIntro">
+<h2>SHOP THE ALL NEW FORD ESCAPE</h2>
+<p>The Ford Escape is designed to startle. Smart is the word for the new features and technology Ford is presenting us with. The redesigned, fully revamped SUV, Escape has been launched. Innovation meets technology in this passionately crafted ride.</p>
+</div>
+<div id="firstBlock">
+<div class="firstBlock-1"><img src="//storage.googleapis.com/bitmoto/dealers/ford/ford/vehicles/escape/escape1.jpg"></div>
+<div class="firstBlock-2"><h3>New and Improved Designs</h3>
+<p>The Ford Escape will not fail to impress you with its magnificent design. With its sporty appearance, chrome finish for its door handles, grilles, and roof rails, it will undoubtedly get you on your knees. Ford Escape does feature 19 inch wheels also with chrome finishing.</p>
+</div></div>
+<div id="secondBlock"><div class="secondBlock-1"><h3>What Happens Within Stays Within</h3>
+<p>Ford offers a panoramic roof for users to enjoy their ride inside out. This roof is wide enough to let you experience the world outside, whether you are seated in the front or back. With a leg space of 43.1 inches in the front and 37.3 inches in the back, it allows you to have a relaxing trip with your companions. Loosen up as you drive or sit back as you can enjoy a head room of 39.9 inches in the first row and 39 inches in the second.</p>
+</div>
+<div class="secondBlock-2">
+<img src="//storage.googleapis.com/bitmoto/dealers/ford/ford/vehicles/escape/escape2.jpg"></div></div>
+<div id="bitCTA"><a href="/new-inventory/index.htm?&amp;model=Escape">BROWSE OUR ALL NEW INVENTORY →</a></div>
+<div id="lastBlock" style="background-image:url('https://storage.googleapis.com/bitmoto/dealers/ford/haldeman-kutztown/vehicles/escape/escape.jpg');">
+<div id="bitBox"><h3>Beauty with Brains</h3>
+<p>The new Escapes have a voice activated SYNC technology to call, search music, and more, without having to take your hands off the wheel or your eyes off the road. The engine is a 2.5 litre I-VCT I4, a 1.6 litre Ecoboost I4 and a 2.0 litre Ecoboost I4. You get front WD as well as a four WD, an automatic six-speed shift and a towing capacity of up to 3,500 lbs with 2.0L Ecoboost.</p>
+<p>The offered EPA estimated fuel efficiency rating is 23 for the city and 32 for the highway for front WD and 22 for the city and 29 for the highway for four WD. The Escape has horsepower of 168 net @ 6000 rpm, 178 net @ 5700 rpm, and 240 net @ 5500 rpm for 2.5L Duratec, 1.6L Ecoboost and 2.0L Ecoboost, respectively, when 93-octane premium unleaded gas is used, proving that intelligent is the new sexy.</p>
+</div></div>
+<div id="cta"><div id="cta1"><span id="bitPhone-txt">OR GIVE US A CALL</span><br><span>(888) 762-2319</span></div><div id="cta2"><a href="/contact.htm"><span>Schedule<br>Test Drive!</span></a></div></div>
+<p id="BitMoto-Disclaimer">*18 MY Escape. FWD SE 200A. MSRP $26,600. Lease for $169/mo w/ $2,539 DAS. 36 month lease with 10,500 miles/year. Includes $750 Renewal/Conquest Rebate + $3,500 Red Carpet Lease Cash + $500 Select Inventory Cash. **Not everyone will qualify for financing. Must qualify thru FMCC. ***Total Savings includes all available rebates Including $750 Renewal/Conquest Rebate + $3,500 Red Carpet Lease Cash + $500 Select Inventory Cash. Security Deposit Waived. Taxes, tags, and doc fee due at signing. Photo for illustration purposes only. Expires 5/31/2018. See dealer for details.</p>
+</main>
+<br>
+
+<footer>
+<div id="footer">
+<p id="disclaimer">This website is a demo site for the BitMoto AutoHub. You are not permitted to view this page unless specifically granted access by BitMoto. This is not a dealer website. The content on this page is not accurate and is simpyl for demonstration purposes.</p>
+<ul>
+<li>Models</li>
+<li>Ford Escape</li>
+<li>Ford F-150</li>
+</ul>
+<ul>
+<li>Inventory</li>
+<li>New Vehicles</li>
+<li>Used Vehicles</li>
+</ul>
+<ul>
+<li>Finance</li>
+<li>Finance Center</li>
+<li>Trade-In Appraisal</li>
+</ul>
+</div>
+</footer>
+<div id="bottomBar">AutoHub Demo - Copyright &copy; 2018 BitMoto.</div>
+
+<hr style="clear:both;">
+
+
+
+
+</body>
+</html>
