--- a/autohub-demo/ford-escape.html
+++ b/autohub-demo/ford-escape.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,6 +12,7 @@
 body {
     margin: 0;
     font-family:verdana;
+    background: aliceblue;
 }
 header {
     background: #373737;
@@ -234,27 +234,16 @@ footer {
 <span class="bitORtxt">OR GET</span><br>
 <span class="bitOfferText"><span id="BitMoto-FordEscapeAPR"></span><sup>%</sup></span> FINANCING<br>FOR <b><span id="BitMoto-FordEscapeTerm"></span> MONTHS</b><br>+ Up to <b>$<span id="BitMoto-FordEscapeCash"></span></b>*</div><div id="bitSavings" style="display: none;"><span class="bitORtxt">OR GET UP TO</span><br><span class="bitOfferText">$<span id="BitMoto-FordEscapeSavings"></span></span> <span id="SavingsText">Total Savings!*</span></div></div><div id="details"><div class="two-1"><a href="/new-inventory/index.htm?search=&amp;saveFacetState=true&amp;model=Escape">SHOP NEW</a></div><div class="two-2"><a href="/used-inventory/index.htm?search=&amp;make=Ford&amp;model=Escape">SHOP USED</a></div><div class="one"><span class="msrpText">STARTING MSRP</span><br><sup>$</sup><span id="BitMoto-FordEscapeMSRP"></span></div></div>
 
-<div id="bitIntro">
-<h2>SHOP THE ALL NEW FORD ESCAPE</h2>
-<p>The Ford Escape is designed to startle. Smart is the word for the new features and technology Ford is presenting us with. The redesigned, fully revamped SUV, Escape has been launched. Innovation meets technology in this passionately crafted ride.</p>
+<hr>
+
+
+<div id="cta">
+<div id="cta1">
+<span id="bitPhone-txt">OR GIVE US A CALL</span><br>
+<span>(888) 762-2319</span>
 </div>
-<div id="firstBlock">
-<div class="firstBlock-1"><img src="//storage.googleapis.com/bitmoto/dealers/ford/ford/vehicles/escape/escape1.jpg"></div>
-<div class="firstBlock-2"><h3>New and Improved Designs</h3>
-<p>The Ford Escape will not fail to impress you with its magnificent design. With its sporty appearance, chrome finish for its door handles, grilles, and roof rails, it will undoubtedly get you on your knees. Ford Escape does feature 19 inch wheels also with chrome finishing.</p>
-</div></div>
-<div id="secondBlock"><div class="secondBlock-1"><h3>What Happens Within Stays Within</h3>
-<p>Ford offers a panoramic roof for users to enjoy their ride inside out. This roof is wide enough to let you experience the world outside, whether you are seated in the front or back. With a leg space of 43.1 inches in the front and 37.3 inches in the back, it allows you to have a relaxing trip with your companions. Loosen up as you drive or sit back as you can enjoy a head room of 39.9 inches in the first row and 39 inches in the second.</p>
+<div id="cta2"><a href="/contact.htm"><span>Schedule<br>Test Drive!</span></a></div>
 </div>
-<div class="secondBlock-2">
-<img src="//storage.googleapis.com/bitmoto/dealers/ford/ford/vehicles/escape/escape2.jpg"></div></div>
-<div id="bitCTA"><a href="/new-inventory/index.htm?&amp;model=Escape">BROWSE OUR ALL NEW INVENTORY →</a></div>
-<div id="lastBlock" style="background-image:url('https://storage.googleapis.com/bitmoto/dealers/ford/haldeman-kutztown/vehicles/escape/escape.jpg');">
-<div id="bitBox"><h3>Beauty with Brains</h3>
-<p>The new Escapes have a voice activated SYNC technology to call, search music, and more, without having to take your hands off the wheel or your eyes off the road. The engine is a 2.5 litre I-VCT I4, a 1.6 litre Ecoboost I4 and a 2.0 litre Ecoboost I4. You get front WD as well as a four WD, an automatic six-speed shift and a towing capacity of up to 3,500 lbs with 2.0L Ecoboost.</p>
-<p>The offered EPA estimated fuel efficiency rating is 23 for the city and 32 for the highway for front WD and 22 for the city and 29 for the highway for four WD. The Escape has horsepower of 168 net @ 6000 rpm, 178 net @ 5700 rpm, and 240 net @ 5500 rpm for 2.5L Duratec, 1.6L Ecoboost and 2.0L Ecoboost, respectively, when 93-octane premium unleaded gas is used, proving that intelligent is the new sexy.</p>
-</div></div>
-<div id="cta"><div id="cta1"><span id="bitPhone-txt">OR GIVE US A CALL</span><br><span>(888) 762-2319</span></div><div id="cta2"><a href="/contact.htm"><span>Schedule<br>Test Drive!</span></a></div></div>
 <p id="BitMoto-Disclaimer">*18 MY Escape. FWD SE 200A. MSRP $26,600. Lease for $169/mo w/ $2,539 DAS. 36 month lease with 10,500 miles/year. Includes $750 Renewal/Conquest Rebate + $3,500 Red Carpet Lease Cash + $500 Select Inventory Cash. **Not everyone will qualify for financing. Must qualify thru FMCC. ***Total Savings includes all available rebates Including $750 Renewal/Conquest Rebate + $3,500 Red Carpet Lease Cash + $500 Select Inventory Cash. Security Deposit Waived. Taxes, tags, and doc fee due at signing. Photo for illustration purposes only. Expires 5/31/2018. See dealer for details.</p>
 </main>
 <br>
