--- a/autohub-demo/specials.html
+++ b/autohub-demo/specials.html
@@ -5,6 +5,7 @@
 
 <link rel="stylesheet" type="text/css" href="https://storage.googleapis.com/autohub-demo.bitmoto.net/slider.css">
 <script async src="https://storage.googleapis.com/autohub-demo.bitmoto.net/functions.js"></script>
+<script async src="https://storage.googleapis.com/dev-smg/global.js"></script>
 
 <style>
 body {
