--- a/autohub-demo/ford-f150.html
+++ b/autohub-demo/ford-f150.html
@@ -1,181 +1,12 @@
-
 <!DOCTYPE html>
 <html>
 <head>
 
-<link rel="stylesheet" type="text/css" href="https://storage.googleapis.com/autohub-demo.bitmoto.net/slider.css">
+<link rel="stylesheet" type="text/css" href="https://storage.googleapis.com/autohub-demo.bitmoto.net/style.css">
 <link rel="stylesheet" type="text/css" href="https://storage.googleapis.com/bitmoto/bitmoto.css">
 <link rel="stylesheet" type="text/css" href="https://www.strunkmarketing.com/bitmoto/css/bitmoto.css">
 <link rel="stylesheet" type="text/css" href="https://storage.googleapis.com/bitmoto/dealers/ford/haldeman-kutztown/vehicles/all/vehicles.css">
 <script async src="https://storage.googleapis.com/autohub-demo.bitmoto.net/functions.js"></script>
-
-<style>
-body {
-    margin: 0;
-    font-family:verdana;
-    background: aliceblue;
-}
-header {
-    background: #373737;
-    color: white;
-    padding: 1%;
-    border-color: orange;
-    border-style: solid;
-    border-width: 0 0 2px 0;
-}
-header div {
-    display: inline-block;
-    width: 48%;
-    margin: auto;
-    vertical-align: top;
-}
-
-header div:nth-of-type(2) {
-    text-align: right;
-}
-
-header hr {
-    border-color: rgba(255,255,255,0.08);
-}
-
-header nav {
-    text-align: center;
-}
-
-header nav a {
-    color: white;
-    font-size:14px;
-    font-weight: bold;
-    text-decoration: none;
-    padding: 4px 1.5%;
-}
-
-header nav a.mute {
-    background: rgba(255,255,255,0.1);
-    color: rgba(0,0,0,0.5);
-    cursor: default;
-}
-
-header nav ul a.mute {
-    background: initial;
-    color: rgba(0,0,0,0.2);
-}
-
-header nav ul a.mute:hover {
-    background: none;
-}
-
-header nav ul {
-    display: none;
-    list-style-type: none;
-    margin: 28px 0 0 0;
-    text-align: left;
-    padding: 16px 8px 16px 10%;
-    position: absolute;
-    background: orange;
-    left: 0;
-    width: 100%;
-}
-
-
-header nav ul li {
-    margin: 16px ;
-}
-
-header nav ul a:hover {
-    background: rgba(255,255,255,0.1);
-}
-
-header address {
-    margin: 4px auto;
-}
-
-.dropdown {
-    padding: 10px 0 50px 0;
-}
-
-.dropdown:hover ul {
-    display: inline-block;
-    z-index: 1;
-}
-
-img {
-    max-width:100%;
-}
-
-#slider {
-    background: #097FAB;
-    min-height:200px;
-    padding: 0 0 20px 0;
-    text-align: center;
-}
-
-#featured {
-    text-align: center;
-}
-
-#featured div {
-    display: inline-block;
-    margin: 0 2px;
-    padding: 2px 0 26px;
-    width:24%;
-    vertical-align: top;
-}
-
-#featured h3, #featured p {
-    margin:0;
-}
-
-#featured1:hover, #featured2:hover, #featured3:hover, #featured4:hover {
-    background: rgba(0,0,0,0.1);
-}
-
-footer {
-    background: #444;
-    color: white;
-    margin: 0 auto 0;
-    padding: 9px;
-}
-
-#footer {
-    max-width: 999px;
-    margin: auto;
-}
-
-#disclaimer {
-    color: rgba(255,255,255,0.6);
-    font-size: 12px;
-}
-
-#footer ul {
-    display: inline-block;
-    margin: 17px auto;
-    width: 27%;
-}
-
-#footer ul li {
-    font-size: 14px;
-    list-style-type: none;
-    margin: 12px 2px 12px 6px;
-}
-
-#footer ul li:nth-of-type(1) {
-    font-size: 17px;
-    font-weight: bold;
-    margin: 12px 2px 16px 0;
-}
-
-#bottomBar {
-    background: rgba(0,0,0,0.5);
-    color: rgba(255,255,255,0.9);
-    font-size: 14px;
-    margin: 0 auto;
-    padding: 6px 0 6px 8%;
-}
-
-
-
-</style>
 
 </head>
 
@@ -198,9 +29,9 @@ footer {
 <ul>
 <li><a class="mute">New Vehicle Inventory</a></li>
 <li><a href="#" class="mute">New Vehicle Specials</a></li>
-<li><a href="#" class="mute">Ford Model Lineup</a></li>
-<li><a href="/ford-escape.html">Ford Escape</a></li>
-<li><a href="/ford-f150.html">Ford F-150</a></li>
+<li><a href="#" class="mute">BitMoto Model Lineup</a></li>
+<li><a href="/bitmoto-supercar.html">BitMoto SuperCar</a></li>
+<li><a href="/bitmoto-supertruck.html">BitMoto SuperTruck</a></li>
 </ul>
 </span>
 <a class="mute" title="Not Clickable">Used Inventory</a>
@@ -220,14 +51,14 @@ footer {
 </a>
 
 <nav>
-<a href="/new-inventory/index.htm?&amp;model=Escape">Shop New Escapes</a>
+<a href="/new-inventory/index.htm">Shop New Trucks</a>
 <a href="/ford-credit-online.htm">Get Pre-Approved</a>
 <a href="/black-book-value-your-trade/index.htm">Value Your Trade</a>
 <a href="/contact.htm">Schedule Test Drive</a>
 </nav>
 
 <div id="vehicle" style="background-image: url('https://storage.googleapis.com/bitmoto/dealers/ford/haldeman-kutztown/vehicles/all/f150-v3.jpg'); width:100%; height:317px; position: relative;line-height:1;margin:auto">
-<div id="bitTitle">THE FORD F-150</div>
+<div id="bitTitle">BITMOTO SUPERTRUCK</div>
 <div id="bitLease">
 <span class="bitORtxt">LEASE FOR ONLY</span><br>
 <span class="bitOfferText"><sup>$</sup><span id="BitMoto-FordF150Lease"></span>/mo.</span><br>
@@ -274,8 +105,8 @@ FOR <b><span id="BitMoto-FordF150Term"></span> MONTHS</b><br>
 <p id="disclaimer">This website is a demo site for the BitMoto AutoHub. You are not permitted to view this page unless specifically granted access by BitMoto. This is not a dealer website. The content on this page is not accurate and is simpyl for demonstration purposes.</p>
 <ul>
 <li>Models</li>
-<li>Ford Escape</li>
-<li>Ford F-150</li>
+<li>BitMoto SuperCar</li>
+<li>BitMoto SuperTruck</li>
 </ul>
 <ul>
 <li>Inventory</li>
