--- a/autohub-demo/specials.html
+++ b/autohub-demo/specials.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="https://storage.googleapis.com/autohub-demo.bitmoto.net/slider.css">
 <link rel="stylesheet" type="text/css" href="https://storage.googleapis.com/autohub-demo.bitmoto.net/style.css">
 <script async src="https://storage.googleapis.com/autohub-demo.bitmoto.net/functions.js"></script>
-<script async src="https://storage.googleapis.com/dev-smg/global.js"></script>
+<script async src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 </head>
 
@@ -162,7 +162,6 @@
 <hr style="clear:both;">
 
 
-
-
+<script async src="https://storage.googleapis.com/dev-smg/global.js"></script>
 </body>
 </html>
