--- a/autohub-demo/specials.html
+++ b/autohub-demo/specials.html
@@ -160,16 +160,30 @@
 <hr style="clear:both;">
 
 <script>
-// Smooth Scroll using JQuery
-jQuery(function($) { 
-$('a[href^="#"]').live('click',function(event){
-    event.preventDefault();
-    var target_offset = $(this.hash).offset() ? $(this.hash).offset().top : 0;
-    //change this number to create the additional off set        
-    var customoffset = 45;
-    $('html, body').animate({scrollTop:target_offset - customoffset}, 500);
-})
-}(jQuery));
+$(document).ready(function(){
+  // Add smooth scrolling to all links
+  $("a").on('click', function(event) {
+
+    // Make sure this.hash has a value before overriding default behavior
+    if (this.hash !== "") {
+      // Prevent default anchor click behavior
+      event.preventDefault();
+
+      // Store hash
+      var hash = this.hash;
+
+      // Using jQuery's animate() method to add smooth page scroll
+      // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+      $('html, body').animate({
+        scrollTop: $(hash).offset().top
+      }, 800, function(){
+   
+        // Add hash (#) to URL when done scrolling (default click behavior)
+        window.location.hash = hash;
+      });
+    } // End if
+  });
+});
 </script>
 
 
